--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: "Montserrat", sans-serif;
+    font-weight: 400;
 }
 
 /* all pages */
@@ -154,12 +155,6 @@ input[type=email],
     color: #000;
 }
 
-.bgblack {
-    background-color: #000;
-    border-radius: 0.25rem;
-    padding: 0;
-}
-
 /* jumbotron landing-img */
 
 .landing-container {
@@ -210,12 +205,11 @@ h1 {
 }
 
 .quote-landing {
-    color: #fff;
+    color: #b22222;
     text-align: center;
     font-family: "Lora", sans-serif;
     font-size: 1rem;
     margin-top: 1rem;
-    padding: 5px;
 }
 
 .quote {
@@ -230,14 +224,12 @@ h1 {
 /* about us */
 
 .about {
-    color: #fff;
-    margin-bottom: 1.5rem;
-    border-radius: 0.25rem;
+    margin-left: 1rem;
+    color: #003333;
 }
 
 .about p {
-    margin-left: 1rem;
-
+    font-size: 1.5rem;
 }
 
 /* our coffees - landing */
@@ -267,18 +259,21 @@ h1 {
 
 /* coffees.html */
 
-.card-header {
-    background-color: #fff;
-    color: #b87333;
-    text-align: center;
+.coffees-container {
+    margin-top: 2rem;
+    background-color: #003333;
+    color: #fff;
+    border-radius: 0.25rem;
 }
 
+.coffee-text p {
+    padding: 1rem;
+}
+
+.card-header,
 .card-body {
-    background-color: #fff;
-}
-
-.card-text {
-    color: #000;
+    background-color: #333333;
+    color: #fff;
 }
 
 /* coffees-single and coffees-blends.html */
@@ -301,7 +296,7 @@ h1 {
     background-color: #b22222;
     border-radius: 0.25rem;
     color: #fff;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
 }
 
 .sca-section {
@@ -374,6 +369,7 @@ h1 {
     border-radius: 0.25rem;
     color: #fff;
     margin-top: 0;
+    padding-bottom: 1rem;
 }
 
 .brew-cardsland {
@@ -381,8 +377,12 @@ h1 {
     color: #000;
     font-weight: bold;
     border-radius: 0.25rem;
-    margin: 0;
-    padding: 0;
+    margin: 1rem;
+    padding: 0.5rem;
+}
+
+.cardsbrew {
+    margin: 1rem;
 }
 
 .brew-cardsland a{
@@ -395,16 +395,26 @@ h1 {
     text-decoration: none;
 }
 
+.bluefont {
+    color: #003333;
+    font-weight: 500;
+}
+
 /* carousel */
 
 .carousel-container {
-    border: 5px solid #b87333;
-    border-radius: 0.25rem;
-    padding: 2rem 0;
+    padding: 0;
 }
 
 .carousel-heading h2 {
     margin: 2rem;
+}
+
+.carousel-caption p{
+    width: inherit;
+    font-size: 1.5rem;
+    background-color: rgba(51, 51, 51, 0.75);
+    color: #fff;
 }
 
 /* quotes */
@@ -513,9 +523,6 @@ h1 {
     .quote-landing {
         font-size: 2.5rem;
     }
-}
-
-@media (min-width: 768px) {
     .footer {
         font-size: 1.5rem;
     }
@@ -529,7 +536,26 @@ h1 {
         margin-right: 0;
     }
     .landingbrew-cards {
-        margin-left: 10rem;
+        margin-right: 2rem;
+    }
+    .cardsbrew {
+        padding: 0.5rem;
+    }
+
+    .ourcoffees-img,
+    .brewguides-img,
+    .ourcourses-img,
+    .contact-img {
+        max-height: 7rem;
+    }
+
+    .list-inline-item:not(:last-child) {
+    padding-right: 2rem;
+    margin-right: 0;
+    }
+
+    .card .card-single {
+        margin-bottom: 2rem;
     }
 }
 
@@ -544,11 +570,5 @@ h1 {
     }
     .main-container {
         margin-top: 140px;
-    }
-}
-
-@media (max-width: 768px) {
-    .landingbrew-cards {
-        margin-left: 0;
     }
 }
