--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -208,12 +208,8 @@ h1 {
     color: #b22222;
     text-align: center;
     font-family: "Lora", sans-serif;
-    font-size: 1rem;
-    margin-top: 1rem;
-}
-
-.quote {
-    margin: 1.8rem 0;
+    font-size: 2.5rem;
+    margin-top: 0;
 }
 
 .quote i {
@@ -520,6 +516,9 @@ h1 {
 /* media queries */
 
 @media (min-width: 768px) {
+    .jumbotron p{
+        font-size: 2rem;
+    }
     .quote-landing {
         font-size: 2.5rem;
     }
@@ -556,6 +555,12 @@ h1 {
 
     .card .card-single {
         margin-bottom: 2rem;
+    }
+}
+
+@media (min-width: 769px) {
+    .signup-container {
+        margin-left: 6rem;
     }
 }
 
