--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 .section-divider {
-    background-color: #b22222;
+    background-color: #333745;
     margin: 1.5rem;
 }
 
@@ -122,11 +122,11 @@ input[type=email],
 }
 
 .navbar .navbar-toggler {
-    border: 2px solid #003333;
+    border: 2px solid #fe5f55;
 }
 
 .navbar .navbar-toggler:hover {
-    border-color: #b87333;
+    border-color: #fe5f55;
 }
 
 .dropdown a {
@@ -139,11 +139,11 @@ input[type=email],
 
 .dropdown-menu {
     border: solid 2px;
-    color: #003333;
+    color: #fe5f55;
 }
 
 .dropdown-menu:hover {
-    color: #b87333;
+    color: #fe5f55;
 }
 
 .navbar-collapse {
@@ -198,21 +198,21 @@ h1 {
 }
 
 .badge-light {
-    background-color: #b87333;
+    background-color: #c7efcf;
     border: none;
-    color: #fff;
+    color: #333745;
     font-size: 1.5rem;
     margin-left: 0.25rem;
 }
 
 .badge-light:hover {
-    background-color: #333333;
+    background-color: #333745;
     border: none;
     color: #fff;
 }
 
 .quote-landing {
-    color: #b22222;
+    color: #333745;
     text-align: center;
     font-family: "Lora", sans-serif;
     font-size: 2.5rem;
@@ -220,15 +220,19 @@ h1 {
 }
 
 .quote i {
-    color: #b22222;
+    color: #fe5f55;
     font-size: 2rem;
 }
 
 /* about us */
 
+.about-container {
+    height: 50vh;
+}
+
 .about {
     margin-left: 1rem;
-    color: #003333;
+    color: #333745;
 }
 
 .about p {
@@ -238,7 +242,7 @@ h1 {
 /* our coffees - landing */
 
 .coffees-text {
-    background-color: #003333;
+    background-color: #333745;
     color: #fff;
     border-radius: 0.25rem;
 }
@@ -250,13 +254,13 @@ h1 {
 
 .linkcoffees {
     text-decoration: none;
-    color: #b22222;
+    color: #fe5f55;
     font-weight: bold;
 }
 
 .linkcoffees a:hover {
     text-decoration: none;
-    color: #b87333;
+    color: #c7efcf;
     font-weight: bold;
 }
 
@@ -264,8 +268,8 @@ h1 {
 
 .coffees-container {
     margin-top: 2rem;
-    background-color: #003333;
-    color: #fff;
+    background-color: #667f83;
+    color: #000;
     border-radius: 0.25rem;
 }
 
@@ -275,14 +279,14 @@ h1 {
 
 .card-header,
 .card-body {
-    background-color: #333333;
+    background-color: #333745;
     color: #fff;
 }
 
 /* coffees-single and coffees-blends.html */
 
 .checked {
-    color: #b22222;
+    color: #fe5f55;
 }
 
 .coffee-rating {
@@ -296,9 +300,9 @@ h1 {
 /* courses-landing */
 
 .sca {
-    background-color: #b22222;
+    background-color: #fe5f55;
     border-radius: 0.25rem;
-    color: #fff;
+    color: #000;
     margin-bottom: 1rem;
 }
 
@@ -319,13 +323,13 @@ h1 {
 
 .brew-cards {
     background-color: #fff;
-    border: 3px solid #b87333;
+    border: 3px solid #333745;
     border-radius: 0.25rem;
 }
 
 .brew-cards:hover {
     background-color: #fff;
-    border: 3px solid #003333;
+    border: 3px solid #fe5f55;
 }
 
 .brew-cards a {
@@ -337,7 +341,7 @@ h1 {
 
 .brew-cards a:hover {
     font-weight: bold;
-    color: #003333;
+    color: #333745;
 }
 
 /* brewing guides (all .htmls) */
@@ -346,7 +350,6 @@ h1 {
     padding: 1rem;
     background-color: #333333;
     color: #fff;
-    border: 1px solid #669966;
     border-radius: 0.25rem;
 }
 
@@ -362,13 +365,13 @@ h1 {
 
 .brewing-download a {
     text-decoration: none;
-    color: #b22222;
+    color: #e63462;
 }
 
 /* brewing.html */
 
 .brewing-div {
-    background-color: #333333;
+    background-color: #333745;
     border-radius: 0.25rem;
     color: #fff;
     margin-top: 0;
@@ -398,10 +401,6 @@ h1 {
     text-decoration: none;
 }
 
-.bluefont {
-    color: #003333;
-    font-weight: 500;
-}
 
 /* carousel */
 
@@ -415,7 +414,7 @@ h1 {
 
 .carousel-caption p{
     width: inherit;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     background-color: rgba(51, 51, 51, 0.75);
     color: #fff;
 }
@@ -476,7 +475,7 @@ h1 {
 
 .contact-us {
     margin-top: 2rem;
-    background-color: #333333;
+    background-color: #667f83;
     color: #fff;
     border-radius: 0.25rem;
 }
@@ -537,6 +536,10 @@ h1 {
     .quote-landing {
         font-size: 2.5rem;
     }
+    .about-cards {
+        float: left;
+    }
+
     .footer {
         font-size: 1rem;
     }
@@ -569,10 +572,6 @@ h1 {
     .list-inline-item:not(:last-child) {
     padding-right: 2rem;
     margin-right: 0;
-    }
-
-    .card .card-single {
-        margin-bottom: 2rem;
     }
 }
 
