--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,13 +112,8 @@ input[type=email],
 .navbar fixed-top {
     position: fixed !important;
 }
-.navbar-nav {
-    align: center;
-}
-
-
-.navbar-brand:hover {
-    border-color: #b87333;
+#collapsibleNavbar {
+    margin-left: 2rem;
 }
 
 .navbar .navbar-toggler {
@@ -147,7 +142,7 @@ input[type=email],
 }
 
 .navbar-collapse {
-    margin-left: 20px;
+    margin-left: 5px;
 }
 
 .nav-item a {
@@ -160,6 +155,7 @@ input[type=email],
 
 .navmedia {
     float: right;
+    margin-right: 5rem;
 }
 
 /* jumbotron landing-img */
@@ -206,7 +202,7 @@ h1 {
 }
 
 .badge-light:hover {
-    background-color: #333745;
+    background-color: #fe5f55;
     border: none;
     color: #fff;
 }
@@ -530,7 +526,10 @@ h1 {
 /* media queries */
 
 @media (min-width: 768px) {
-    .jumbotron p{
+    .navbar-nav {
+        margin-left: 5rem;
+    }
+    .jumbotron p {
         font-size: 2rem;
     }
     .quote-landing {
@@ -539,9 +538,8 @@ h1 {
     .about-cards {
         float: left;
     }
-
     .footer {
-        font-size: 1rem;
+        font-size: 1.5rem;
     }
     .fab {
         font-size: 2rem;
