--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -466,9 +466,9 @@ h1 {
 }
 
 .body-accordion p {
-    font-size: 12px;
+    font-size: 16px;
     padding: 0;
-    margin: 0 1rem;
+    margin-top: 1rem;
 }
 
 /* contact.html */
