content and styling of brewing-sca.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -367,9 +367,9 @@ h1 {
 /* brewing.html */
 
 .brewing-div {
-    background-color: #333745;
+    background-color: #667f83;
     border-radius: 0.25rem;
-    color: #fff;
+    color: #000;
     margin-top: 0;
     padding-bottom: 1rem;
 }
