content to README.md

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -406,7 +406,7 @@ h1 {
 /* brewing.html */
 
 .brewing-div {
-    background-color: #667f83;
+    background-color: #e9eae2;
     border-radius: 0.25rem;
     color: #000;
     margin-top: 0;
@@ -550,7 +550,7 @@ h1 {
 /* footer */
 
 .footer {
-    background-color: #c7efcf;
+    background-color: #ddc852;
     color: #333745;
     font-size: 1rem;
     font-family: "Montserrat", sans-serif;
