minor fixes to brewing.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -405,11 +405,11 @@ h1 {
 
 /* brewing.html */
 
-.brewing-div {
+.wrapper-brewing {
     background-color: #c2cad0;
     border-radius: 0.25rem;
     color: #000;
-    margin-top: 0;
+    
     padding-bottom: 1rem;
 }
 
