--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -246,8 +246,10 @@ h1 {
 }
 
 .cards-h2 {
-    margin-bottom: 2rem;
+    margin: 2rem;
     font-weight: bold;
+    font-size: 2rem;
+    color: #333745;
 }
 
 .collapse-landing a{
